# agents-skills-portable

./: Dockerfile  README.md  mcp-config-example.json  pyproject.toml  readme-visual.html  server.py
housekeeper/: SKILL.md
housekeeper/templates/: reconciliation-report-template.md
peacetime/: SKILL.md
robertgreene/: SKILL.md
safety-net/: README.md
strategic-data-analyst/references/: over-correlation-tests.md  promotion-criteria.md  risk-matrix-examples.md
strategy-workspace/: README.md
strategy-workspace/templates/: archon.agent.md  real-doug-stamper.agent.md  stamper.agent.md  visual-dossier.html
v1/peacetime/: SKILL.md
v1/peacetime/references/: arc-tracking.md  doc-ingestion.md  pushback-protocol.md  self-challenge.md
v1/robertgreene/: SKILL.md
v1/strategic-data-analyst/: SKILL.md
v1/strategic-data-analyst/references/: durability-mechanics.md
v1/strategy-workspace/templates/: real-doug-stamper.agent.md  weapon-rack.md
v1/wartime/references/: real-doug-stamper.md
v2-planning/: README.md  franchiser-architecture.md  graph-schema-design.md  strategic-relevance-bubble-map.html
wartime/: SKILL.md
wartime/references/: persona.md  power-framework.md
