[project]
name = "strategy-framework-mcp"
version = "0.1.0"
description = "MCP server exposing the Strategy Framework skills, references, and tools"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
strategy-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
